2002-08-03  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h: add std:: namespace for exception class,
	as required by gcc 3.1.1

	* libxmt: Version 1.6.1
	
2002-07-15  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* Makefile.inc, time.h, time.cc (Repository):
	time-related functions,	that has problems with
	portability and/or mt-safety will be here.

2002-07-12  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* libxmt: Version 1.6.0

2002-07-11  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.h, xmt.cc (Repository): add try_wait_time,
	thanks for Ivan Vigasin.

2002-06-23  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc, xmt.h (Repository): remove signal throw---seems not work
	properly; provide handler that make sanity of Thread object by signal
	TERM; modify thread-specific data pocessing with iword/pword functions;
	this still need to fix for solaris threads and Windows.

2002-06-15  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* xmt.cc (Repository): add signal handler, that exit
	from thread; some experiments with signal throw.

2002-04-17  Petr Ovchenkov  <ptr@Island.Br.UrbanNet.Ru>

	* thr_mgr.cc, xmt.cc: replace __PG prefix by __FIT


2001-07-27  Petr Ovchenkov  <ptr@ParallelGraphics.COM>

	* libxmt: Version 1.5.1
	
	* Makefile.gcc (Repository): provide workaround for
	bug in GNU make 3.79*---it foget old value of variable when
	tag-dependent variable use += operator, if includes of makefiles
	is too deep---near deepth of 3. This influence to libraries building.
	Add explicit link with other C++ shared libraries---this significantly
	reduce library size.

2001-06-05  Petr Ovchenkov  <ptr@ParaGraph.Ru>

	* Makefile.inc (Message): library version 1.5.0
	This reflect real release major version of libxmt

2001-06-04  Petr Ovchenkov  <ptr@ParallelGraphics.COM>

	* libxmt: Work with STLport 4.5 beta 8 (from stlport cvs);
	remove obsolete in any case dependence from non-STLport iostreams
	realization (it should not work).
