@@ -1,12 +1,14 @@
-// -*- C++ -*- Time-stamp: <02/07/11 12:39:15 ptr>
+// -*- C++ -*- Time-stamp: <02/09/25 12:07:30 ptr>
 
 /*
  *
  * Copyright (c) 1997-1999, 2002
  * Petr Ovtchenkov
  *
- * Copyright (c) 1999-2001
+ * Portion Copyright (c) 1999-2001
  * Parallel Graphics Ltd.
+ *
+ * Licensed under the Academic Free License Version 1.0
  * 
  * This material is provided "as is", with absolutely no warranty expressed
  * or implied. Any use is at your own risk.
@@ -16,13 +18,14 @@
  * provided that the above copyright notice appear in all copies and
  * that both that copyright notice and this permission notice appear
  * in supporting documentation.
+ *
  */
 
 #ifdef __unix
 #  ifdef __HP_aCC
 #pragma VERSIONID "@(#)$Id$"
 #  else
-#pragma ident "@(#)$Id$"
+#ident "@(#)$Id$"
 #  endif
 #endif
 
